Update: change Nopends references to docs.nopends.com across multiple files

--- a/apps/docs/content/docs/ui/versioning.mdx
+++ b/apps/docs/content/docs/ui/versioning.mdx
@@ -33,7 +33,7 @@ For example:
 
 ## Full Versioning
 
-Sometimes you want to version the entire website, such as https://v14.nopends.dev (Nopends v14) and https://nopends.dev (Latest Nopends).
+Sometimes you want to version the entire website, such as https://v14.docs.nopends.com (Nopends v14) and https://docs.nopends.com (Latest Nopends).
 
 You can create a Git branch for a version of docs (call it `v2` for example), and deploy it as a separate app on another subdomain like `v2.my-site.com`.
 
